<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.finos.fluxnova.ai.mcp</groupId>
  <artifactId>engine-mcp-query</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>engine-mcp-query</name>
  <description>MCP query extension for the Fluxnova process engine</description>
  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Dependency Versions -->
    <fluxnova.version>1.0.0</fluxnova.version>
    <spring-boot.version>3.5.8</spring-boot.version>
    <spring-ai.version>1.1.2</spring-ai.version>
    <swagger.version>2.2.38</swagger.version>
    <!-- Test Versions -->
    <junit.version>5.10.1</junit.version>
    <mockito.version>5.8.0</mockito.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <!-- Import Spring Boot BOM to manage all Spring and common library versions -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Override Swagger version to resolve convergence -->
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations-jakarta</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <!-- Override Nimbus JOSE JWT version to resolve convergence -->
      <dependency>
        <groupId>com.nimbusds</groupId>
        <artifactId>nimbus-jose-jwt</artifactId>
        <version>9.37.4</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <!-- Fluxnova BPM Engine -->
    <dependency>
      <groupId>org.finos.fluxnova.bpm</groupId>
      <artifactId>fluxnova-engine</artifactId>
      <version>${fluxnova.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- Spring AI MCP Server -->
    <dependency>
      <groupId>org.springframework.ai</groupId>
      <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
      <version>${spring-ai.version}</version>
    </dependency>
    <!-- SLF4J for logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <!-- Swagger annotations for schema descriptions -->
    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations-jakarta</artifactId>
    </dependency>
    <!--  Security: HTTP Basic Auth + Bearer token (fallback) and OAuth2 (when configured)  -->
    <dependency>
      <groupId>org.finos.fluxnova.bpm.springboot</groupId>
      <artifactId>fluxnova-bpm-spring-boot-starter-security</artifactId>
      <version>${fluxnova.version}</version>
    </dependency>
    <!-- Test Dependencies -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.6.2</version>
        <executions>
          <execution>
            <id>enforce</id>
            <configuration>
              <skip>false</skip>
              <rules>
                <DependencyConvergence />
              </rules>
            </configuration>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
